--- a/other/python_itertools.ipynb
+++ b/other/python_itertools.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "source": [
     "import itertools"
    ],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "source": [
     "counter = itertools.count(start=1, step=2)\n",
     "print(next(counter))\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 3,
    "source": [
     "daily_data = list(itertools.zip_longest(range(10), data))\n",
     "print(daily_data)"
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "source": [
     "counter = itertools.cycle(['On', 'Off'])\n",
     "\n",
@@ -88,12 +88,23 @@
     "print(next(counter))\n",
     "print(next(counter))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "On\n",
+      "Off\n",
+      "On\n",
+      "Off\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "source": [
     "counter = itertools.repeat(2, times=4)\n",
     "print(next(counter))\n",
@@ -106,22 +117,42 @@
     "squares = map(pow, range(1,10), itertools.repeat(2))\n",
     "print(list(squares))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "source": [
     "squares = itertools.starmap(pow, [(0,2), (1,2), (2,2)])\n",
     "print(list(squares))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0, 1, 4]\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "source": [
     "letters = ['a','b','c','d']\n",
     "numbers = [0,1,2,3]\n",
@@ -140,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "source": [
     "\n",
     "result = itertools.combinations(letters, 2)\n",
@@ -149,7 +180,15 @@
     "for item in list(result):\n",
     "\tprint(item)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[('a', 'b'), ('a', 'c'), ('a', 'd'), ('b', 'c'), ('b', 'd'), ('c', 'd')]\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -162,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "source": [
     "result = itertools.permutations(letters, 2)\n",
     "print(list(result))\n",
@@ -170,7 +209,15 @@
     "for item in list(result):\n",
     "\tprint(item)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[('a', 'b'), ('a', 'c'), ('a', 'd'), ('b', 'a'), ('b', 'c'), ('b', 'd'), ('c', 'a'), ('c', 'b'), ('c', 'd'), ('d', 'a'), ('d', 'b'), ('d', 'c')]\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -183,14 +230,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "source": [
     "result = itertools.product(numbers, repeat=2)\n",
     "\n",
     "for item in list(result):\n",
     "\tprint(item)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(0, 0)\n",
+      "(0, 1)\n",
+      "(0, 2)\n",
+      "(0, 3)\n",
+      "(1, 0)\n",
+      "(1, 1)\n",
+      "(1, 2)\n",
+      "(1, 3)\n",
+      "(2, 0)\n",
+      "(2, 1)\n",
+      "(2, 2)\n",
+      "(2, 3)\n",
+      "(3, 0)\n",
+      "(3, 1)\n",
+      "(3, 2)\n",
+      "(3, 3)\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -204,14 +274,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "source": [
     "result = itertools.combinations_with_replacement(numbers, 2)\n",
     "\n",
     "for item in list(result):\n",
     "\tprint(item)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(0, 0)\n",
+      "(0, 1)\n",
+      "(0, 2)\n",
+      "(0, 3)\n",
+      "(1, 1)\n",
+      "(1, 2)\n",
+      "(1, 3)\n",
+      "(2, 2)\n",
+      "(2, 3)\n",
+      "(3, 3)\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -224,14 +311,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "source": [
     "combined = itertools.chain(letters, numbers, names)\n",
     "\n",
     "for item in combined:\n",
     "\tprint(item)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "Cristine\n",
+      "David\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -244,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 13,
    "source": [
     "result = itertools.islice(range(10), 1, 8, 2)\n",
     "\n",
@@ -263,13 +367,6 @@
      ]
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
