--- a/other/python_itertools.ipynb
+++ b/other/python_itertools.ipynb
@@ -2,31 +2,44 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Itertools"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import itertools"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### itertools.**count**(*start=0*, *step=1*)\n",
     "Make an iterator that returns evenly spaced values starting with number start. Often used as an argument to map() to generate consecutive data points. Also, used with zip() to add sequence numbers."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "[(0, 100), (1, 200), (2, 300), (3, 400)]\n"
+     ]
+    }
+   ],
    "source": [
     "counter = itertools.count(start=1, step=2)\n",
     "print(next(counter))\n",
@@ -36,62 +49,50 @@
     "data = [100,200,300,400]\n",
     "daily_data = list(zip(itertools.count(), data))\n",
     "print(daily_data)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "1\n",
-      "3\n",
-      "5\n",
-      "[(0, 100), (1, 200), (2, 300), (3, 400)]\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### itertools.**zip_longest**(**iterables*, *fillvalue=None*)\n",
     "Make an iterator that aggregates elements from each of the iterables. If the iterables are of uneven length, missing values are filled-in with fillvalue. Iteration continues until the longest iterable is exhausted."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "source": [
-    "daily_data = list(itertools.zip_longest(range(10), data))\n",
-    "print(daily_data)"
-   ],
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "[(0, 100), (1, 200), (2, 300), (3, 400), (4, None), (5, None), (6, None), (7, None), (8, None), (9, None)]\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "daily_data = list(itertools.zip_longest(range(10), data))\n",
+    "print(daily_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### itertools.**cycle**(*iterable*)\n",
+    "Make an iterator returning elements from the iterable and saving a copy of each. When the iterable is exhausted, return elements from the saved copy. Repeats indefinitely."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "source": [
-    "counter = itertools.cycle(['On', 'Off'])\n",
-    "\n",
-    "print(next(counter))\n",
-    "print(next(counter))\n",
-    "print(next(counter))\n",
-    "print(next(counter))"
-   ],
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "On\n",
       "Off\n",
@@ -100,27 +101,31 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "counter = itertools.cycle(['On', 'Off'])\n",
+    "\n",
+    "print(next(counter))\n",
+    "print(next(counter))\n",
+    "print(next(counter))\n",
+    "print(next(counter))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### itertools.**repeat**(*object*, *times=None*)\n",
+    "Make an iterator that returns object over and over again. Runs indefinitely unless the times argument is specified."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "source": [
-    "counter = itertools.repeat(2, times=4)\n",
-    "print(next(counter))\n",
-    "print(next(counter))\n",
-    "print(next(counter))\n",
-    "print(next(counter))\n",
-    "\n",
-    "\n",
-    "# list of squares of numbers with given range\n",
-    "squares = map(pow, range(1,10), itertools.repeat(2))\n",
-    "print(list(squares))"
-   ],
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "2\n",
       "2\n",
@@ -130,48 +135,68 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "counter = itertools.repeat(2, times=4)\n",
+    "print(next(counter))\n",
+    "print(next(counter))\n",
+    "print(next(counter))\n",
+    "print(next(counter))\n",
+    "\n",
+    "# list of squares of numbers with given range\n",
+    "squares = map(pow, range(1,10), itertools.repeat(2))\n",
+    "print(list(squares))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "source": [
-    "squares = itertools.starmap(pow, [(0,2), (1,2), (2,2)])\n",
-    "print(list(squares))"
-   ],
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "[0, 1, 4]\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "squares = itertools.starmap(pow, [(0,2), (1,2), (2,2)])\n",
+    "print(list(squares))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "letters = ['a','b','c','d']\n",
     "numbers = [0,1,2,3]\n",
     "names = ['Cristine', 'David']"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### itertools.**combinations**(*iterable*, *r*)\n",
     "Return `r` length subsequences of elements from the input iterable."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('a', 'b'), ('a', 'c'), ('a', 'd'), ('b', 'c'), ('b', 'd'), ('c', 'd')]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "result = itertools.combinations(letters, 2)\n",
@@ -179,68 +204,53 @@
     "\n",
     "for item in list(result):\n",
     "\tprint(item)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[('a', 'b'), ('a', 'c'), ('a', 'd'), ('b', 'c'), ('b', 'd'), ('c', 'd')]\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### itertools.**permutations**(*iterable*, *r=None*)\n",
     "Return `r` successive length permutations of elements from the input iterable."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('a', 'b'), ('a', 'c'), ('a', 'd'), ('b', 'a'), ('b', 'c'), ('b', 'd'), ('c', 'a'), ('c', 'b'), ('c', 'd'), ('d', 'a'), ('d', 'b'), ('d', 'c')]\n"
+     ]
+    }
+   ],
    "source": [
     "result = itertools.permutations(letters, 2)\n",
     "print(list(result))\n",
     "\n",
     "for item in list(result):\n",
     "\tprint(item)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[('a', 'b'), ('a', 'c'), ('a', 'd'), ('b', 'a'), ('b', 'c'), ('b', 'd'), ('c', 'a'), ('c', 'b'), ('c', 'd'), ('d', 'a'), ('d', 'b'), ('d', 'c')]\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### itertools.**product**(*iterables*, *repeat=1*)\n",
     "Return cartesian product of input iterables. Roughly equivalent to nested for-loops in a generator expression. For example, `product(A, B)` returns the same as `((x,y) for x in A for y in B)`."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "source": [
-    "result = itertools.product(numbers, repeat=2)\n",
-    "\n",
-    "for item in list(result):\n",
-    "\tprint(item)"
-   ],
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "(0, 0)\n",
       "(0, 1)\n",
@@ -261,30 +271,30 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "result = itertools.product(numbers, repeat=2)\n",
+    "\n",
+    "for item in list(result):\n",
+    "\tprint(item)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### itertools.**combinations_with_replacement**(*iterable*, *r*)\n",
     "Return `r` length subsequences of elements from the input iterable allowing \n",
     "individual elements to be repeated more than once."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "source": [
-    "result = itertools.combinations_with_replacement(numbers, 2)\n",
-    "\n",
-    "for item in list(result):\n",
-    "\tprint(item)"
-   ],
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "(0, 0)\n",
       "(0, 1)\n",
@@ -299,29 +309,29 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "result = itertools.combinations_with_replacement(numbers, 2)\n",
+    "\n",
+    "for item in list(result):\n",
+    "\tprint(item)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### itertools.**chain**(*iterables*)\n",
     "Make an iterator that returns elements from the first iterable until it is exhausted, then proceeds to the next iterable, until all of the iterables are exhausted."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "source": [
-    "combined = itertools.chain(letters, numbers, names)\n",
-    "\n",
-    "for item in combined:\n",
-    "\tprint(item)"
-   ],
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "a\n",
       "b\n",
@@ -336,29 +346,29 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "combined = itertools.chain(letters, numbers, names)\n",
+    "\n",
+    "for item in combined:\n",
+    "\tprint(item)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### itertools.**islice**(*iterable*, *start*, *stop*, *step*)\n",
     "Similar to regular list slicing. Unlike regular slicing, islice() does not support negative values for start, stop, or step."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "source": [
-    "result = itertools.islice(range(10), 1, 8, 2)\n",
-    "\n",
-    "for item in result:\n",
-    "\tprint(item)"
-   ],
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "1\n",
       "3\n",
@@ -367,30 +377,35 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "result = itertools.islice(range(10), 1, 8, 2)\n",
+    "\n",
+    "for item in result:\n",
+    "\tprint(item)"
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.6 64-bit",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.9.6",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.6 64-bit"
-  },
-  "interpreter": {
-   "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
